--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dnspod-ddns2",
-  "author": "drqzju@gmail.com",
-  "version": "0.1.6",
+  "author": "luckydrq<drqzju@gmail.com>",
+  "version": "0.1.7",
   "keywords": [
     "dnspod",
     "ddns",
